test_suite/tests/errors/duplicate_rule_name.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            step? { return; }
            step? { return; }
    }
}
