test_suite/tests/errors/duplicate_rule_name.stderr
error: Duplicate rule 'step' in state 'foo'
 --> tests/errors/duplicate_rule_name.rs:7:13
  |
7 |             step? { return; }
  |             ^^^^
